19/07/2018
zsoil_results:
- read_L02 (new): reading of nonlinear shell results

v1.1.12

16/10/2018
zsoil_results:
- in read_dat, reading DRM element lists
- reading STRESSES and STRESESS (has been corrected in ZS v18)
vtktools:
- write 2D volumics
- in get_section_vol, return by default component array, if optional argument
  "component" is given it returns a scalar
- option for volumics: export only boundary faces to vtu
02/11/2018:
vtktools:
- write cut to vtu for volumics

v1.1.14
vtktools:
- added support for refstep
- added get_tstr()
- added get_lut()
- bugfix in create_cell_data for array with 1 component

v1.1.15
zsoil_inp:
- added support for 2D quads

v1.1.16
zsoil_inp:
- reading layered shell material data
zsoil_results:
- added DAMAGE array in read_L02 (for nl shells)
- added reading of (certain) material data from dat-file

v1.1.17 & 18
vtktools:
get_curved_section_vol
postpro_lib:
locator_curved etc

v1.1.19
zsoil_results:
SHQ4 are also shells
zsoil_inp:
SHQ4 are also shells

v1.2.1
python 3.7 compatible

v1.2.2
zsoil_results:
bug fix in read_dat for concrete plastic damage model

v1.2.3
vtktools:
sf in file name for vtu files
zsoil_results: support for temperature

v1.3.0
zsoil_results:
read_s15 (membranes) 
vtktools:
membranes
zsoil_inp:
seepage elements

v1.3.1
zsoil_inp:
read distributed masses

v1.3.2
div

v1.3.3
zsoil_inp:
- thickness of shells .ilt

v1.3.4
zsoil_inp:
- corrected bug when reading orthotropic shells

v1.3.6
vtktools:
- added create_pvd and save_pvd
- renaming array FORCE in FORCES for beams to avoid conflict with different
  number of components than for trusses

v.1.3.7
postpro_lib:
- GetDiscreteColormap

v1.3.8
read_results:
- compute_princ_stresses: element list as argument
- verbose level
26/01/2021:
read_inp:
- reading DRM data
- reading periodic bcs

v1.3.9
zsoil_inp:
bugfix reading 3d surface loads

v1.3.10
vtktools:
don't use refstep for thickness of shells