@@ -154,3 +154,5 @@ bugfix reading 3d surface loads
 v1.3.10
 vtktools:
 don't use refstep for thickness of shells
+read_results:
+number of gpts for cnt in read_s07
